# libav-node

./: .gitmodules  CMakeLists.txt  build.bat  build.sh  extract_prebuilt.bat
include/: libav-node.h  libav_service.h
src/: av-dec.cc  av-enc.cc  av-node.cc  av.h  common.cc  common.h  ipc-pipe.cc  ipc-pipe.h  main.cc  svc.cc  test.cc
